--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Fakuade Gbenga | Resume</title>
+    <title>Fakuade Gbenga | Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/animate.css">
@@ -45,7 +45,7 @@
                 <div class="col-md-10 text-center pt-5">
 
                     <h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Fakuade Gbenga</strong></h1>
-                    <strong class="d-block text-white text-uppercase letter-spacing">and this is My Resume</strong>
+                    <strong class="d-block text-white text-uppercase letter-spacing">and this is My Portfolio</strong>
 
                 </div>
             </div>
