--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <h2>About <strong>Me</strong></h2>
                     </div>
                     <p class="lead">I’m a tech-savvy, self taught Web Developer and a Meteorology and Climate Science graduate from Federal University of Technology, Akure</p>
-                    <p class="mb-5  "> My passion is to pursue a long-term career in a well-focused and structured Tech Company that will enable me contribute to the growth and profitability of the organization and aswell offer me opportunities for self-development. I am
+                    <p class="mb-5  "> My passion is to pursue a long-term career in a well-focused and structured Tech Company that will enable me contribute to the growth and profitability of the organization and as well offer me opportunities for self-development. I am
                         a good team player, listener with the ability to make presentation and speak in a persuasive manner. </p>
 
                     <p>
@@ -231,7 +231,7 @@
 							<span class="icon-database2"></span>
                         </span>
                         <h3 class="mb-4">Back-End Web Development</h3>
-                        <p>Building server-side web applications & integrating fron-end elements with server side logic.</p>
+                        <p>Building server-side web applications & integrating front-end elements with server side logic.</p>
                         <p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                             <input type="email" class="form-control px-3 py-4" placeholder="Your Email" name="email">
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control px-3 py-4" placeholder="Your Phone" name="phonenum">
+                            <input type="tel" class="form-control px-3 py-4" placeholder="Your Phone" name="phonenum">
                         </div>
                         <div class="form-group mb-5">
                             <textarea class="form-control px-3 py-4" cols="30" rows="10" placeholder="Write a Message" name="msg"></textarea>
