--- a/index.html
+++ b/index.html
@@ -264,19 +264,19 @@
                 </div>
 
                 <div class="col-md-7 mb-5 mb-md-0">
-                    <form action="contact.php" class="site-form" method="POST">
+                    <form action="https://formspree.io/mrgynpey" class="site-form" method="POST">
                         <h3 class="mb-5">Get In Touch</h3>
                         <div class="form-group">
-                            <input type="text" class="form-control px-3 py-4" placeholder="Your Name" name="name">
+                            <input type="text" class="form-control px-3 py-4" placeholder="Your Name" name="_name">
                         </div>
                         <div class="form-group">
                             <input type="email" class="form-control px-3 py-4" placeholder="Your Email" name="email">
                         </div>
                         <div class="form-group">
-                            <input type="tel" class="form-control px-3 py-4" placeholder="Your Phone" name="phonenum">
+                            <input type="tel" class="form-control px-3 py-4" placeholder="Your Phone" name="_phone">
                         </div>
                         <div class="form-group mb-5">
-                            <textarea class="form-control px-3 py-4" cols="30" rows="10" placeholder="Write a Message" name="msg"></textarea>
+                            <textarea class="form-control px-3 py-4" cols="30" rows="10" placeholder="Write a Message" name="message"></textarea>
                         </div>
                         <div class="form-group">
                             <input type="submit" class="btn btn-primary  px-4 py-3" value="Send Message" name="submit">
