--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                             <input type="email" class="form-control px-3 py-4" placeholder="Your Email" name="email">
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control px-3 py-4" placeholder="Your Phone" name="_phone">
+                            <input type="tel" class="form-control px-3 py-4" placeholder="Your Phone" name="_phone">
                         </div>
                         <div class="form-group mb-5">
                             <textarea class="form-control px-3 py-4" cols="30" rows="10" placeholder="Write a Message" name="message"></textarea>
