--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="p-inner">
                             <h4>TeeGlamz v1</h4>
                             <div class="cat">A makeup portfolio </div>
-                            <p><a href="#" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
+                            <p><a href="http://teeglamz.rf.gd/" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
                         </div>
                     </div>
                     <div class="single-portfolio col-sm-4 all packaging">
@@ -136,7 +136,7 @@
                         <div class="p-inner">
                             <h4>Franklin's Diner</h4>
                             <div class="cat">A Sample Restaurant Webpage</div>
-                            <p><a href="#" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
+                            <p><a href="http://franklindiner.rf.gd/" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
                         </div>
                     </div>
 
