--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="p-inner">
                             <h4>JLG | Just Ladies & Gentlemen </h4>
                             <div class="cat">A fashion blog/Store</div>
-                            <p><a href="http://jlg.epizy.com/" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
+                            <p><a href="http://jlg.epizy.com/" target="_blank" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
                         </div>
                     </div>
                     <div class="single-portfolio col-sm-4 all mockup">
@@ -98,7 +98,7 @@
                         <div class="p-inner">
                             <h4>TeeGlamz v2</h4>
                             <div class="cat">A Makeup Portfolio </div>
-                            <p><a href="https://mister-gee.github.io/TeeGlamzV2/" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
+                            <p><a href="https://mister-gee.github.io/TeeGlamzV2/" target="_blank" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
                         </div>
                     </div>
                     <div class="single-portfolio col-sm-4 all packaging">
@@ -117,7 +117,7 @@
                         <div class="p-inner">
                             <h4>TeeGlamz v1</h4>
                             <div class="cat">A makeup portfolio </div>
-                            <p><a href="http://teeglamz.rf.gd/" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
+                            <p><a href="http://teeglamz.rf.gd/" target="_blank" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
                         </div>
                     </div>
                     <div class="single-portfolio col-sm-4 all packaging">
@@ -136,7 +136,7 @@
                         <div class="p-inner">
                             <h4>Franklin's Diner</h4>
                             <div class="cat">A Sample Restaurant Webpage</div>
-                            <p><a href="http://franklindiner.rf.gd/" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
+                            <p><a href="http://franklindiner.rf.gd/" target="_blank" class="site-link">View Page<i class="icon-chevron-right"></i></a></p>
                         </div>
                     </div>
 
