--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                     <p>
                         <a href="http://www.facebook.com/fakuade.gbengaseun" class="social-item"><span class="icon-facebook2"></span></a>
                         <a href="#" class="social-item"><span class="icon-twitter"></span></a>
-                        <a href="#" class="social-item"><span class="icon-instagram2"></span></a>
+                        <a href="https://www.instagram.com/_mister_ghost/" class="social-item"><span class="icon-instagram2"></span></a>
                         <a href="http://www.linkedin.com/in/fakuade-gbenga-2a760a107" class="social-item"><span class="icon-linkedin2"></span></a>
 
                     </p>
